# Screaming_channel

./: README.md
nrf52840/pca10056/blank/armgcc/: Makefile
nrf5340/cpuapp/: CMakeLists.txt  README.rst  prj.conf
nrf5340/cpuapp/src/: main.c
nrf5340/cpunet/: CMakeLists.txt  README.rst  prj.conf
nrf5340/cpunet/src/: bitcount.c  main.c  radio_test.c
